src/components/generic/icon-button.css
.icon-button {
  -webkit-tap-highlight-color: transparent;
  align-items: center;
  background: none;
  border-radius: 50%;
  border: var(--border-width) solid var(--white);
  box-shadow: 0 0 var(--spacing-small) var(--white);
  cursor: pointer;
  display: flex;
  height: 4rem;
  justify-content: center;
  outline: 0;
  padding: 0;
  stroke: var(--white);
  transition-duration: var(--timing-fast);
  transition-property: stroke, transform;
  transition-timing-function: ease-in-out;
  width: 4rem;
}

.icon-button--slide-in {
  animation-direction: reverse;
  animation-duration: var(--timing-base);
  animation-fill-mode: forwards;
  animation-name: slide-down;
  animation-timing-function: ease-in-out;
  transform: translateY(100vh);
}

